# metadata-submitter

./: .bandit.yml  .coveragerc  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pyspelling.yml  .spellcheck.yml  .travis.yml  .wordlist.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile-ci  Dockerfile-dev  Makefile  Procfile  README.md  alembic.ini  docker-compose-tls.yml  docker-compose.override.yml  docker-compose.yml  env_example  locust.conf  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  tox.ini  vulture_whitelist.py  whitelist_dead_code.py
.devcontainer/: devcontainer.json  docker-compose.extend.yml  docker-compose.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: epic.md  feature_request.md  general-issue-template.md  user_story.md
.github/config/: .spellcheck.yml  .wordlist.txt
.github/workflows/: codeql.yml  combine-dependabot-prs.yml  dependabot-auto-merge.yml  docs.yml  int.yml  production.yml  publish.yml  style.yml  unit.yml  wait_container.sh
deploy/: app.sh  consumer.sh
deploy/mongodb/: docker-compose.yml
development/: Dockerfile-dev  docker-compose.yml
development/mongodb-docker/: docker-compose.yml
dockerfiles/: Dockerfile  Dockerfile-dev  Dockerfile-ldap-dev  Dockerfile-test
docs/: BP_submission.md  SD_submission.md  code.rst  conf.py  deploy.rst  frontend.rst  index.rst  metadata.rst  openapi.yml  specification.yml  submitter.rst  test.rst  validator.rst
docs/_static/: style.css
docs/dictionary/: wordlist.txt
examples/: create_token.py
metadata_backend/: __init__.py  __main__.py  config.py  consumer.py  db_services.py  health.py  logger.py  routes.py  schema_load.py  server.py  validator.py  views.py
metadata_backend/api/: __init__.py  auth.py  dependencies.py  errors.py  exceptions.py  handlers.py  health.py  json.py  metax_api_handler.py  middlewares.py  models.py  operators.py  parser.py  resources.py  translator.py  views.py
metadata_backend/api/handlers/: __init__.py  api_handlers.py  auth.py  common.py  files.py  folder.py  folder_handler.py  health.py  key.py  object.py  object_handler.py  publish.py  rems.py  rems_proxy.py  restapi.py  static.py  submission.py  submission_handler.py  template.py  templates_handler.py  user.py  user_handler.py  xml_submission.py
metadata_backend/api/models/: __init__.py  app.py  base.py  datacite.py  health.py  metax.py  models.py  rems.py  sda.py  submission.py
metadata_backend/api/operators/: __init__.py  base.py  common.py  file.py  object.py  object_base.py  object_xml.py  project.py  submission.py  user.py  xml_object.py
metadata_backend/api/processors/: __init__.py  models.py  (+2 more)
metadata_backend/conf/: __init__.py  admin.py  bigpicture.py  c4gh.py  conf.py  database.py  datacite.py  deployment.py  discovery.py  ena_schemas.json  jwt.py  keystone.py  ldap.py  metax.py  oidc.py  pid.py  rems.py  ror.py  s3.py  schemas.json
metadata_backend/database/: __init__.py  db_service.py  db_services.py
metadata_backend/helpers/: __init__.py  config.py  csv_parser.py  doi.py  logger.py  metax_api_handler.py  metax_mapper.py  mirror.py  parser.py  retry.py  schema_load.py  schema_loader.py  validator.py  workflow.py
metadata_backend/message_broker/: __init__.py  mq_service.py
metadata_backend/scripts/: fetch_metax.py
metadata_backend/services/: __init__.py  admin_service.py  admin_service_handler.py  auth_service.py  datacite_service.py  datacite_service_handler.py  keystone_service.py  metax_mapper.py  metax_service.py  metax_service_handler.py  pid_ms_handler.py  pid_service.py  pouta_service_handler.py  rems_service.py  rems_service_handler.py  retry.py  ror_service.py  service_handler.py  taxonomy_search_handler.py
mongodb/: docker-compose.yml
scripts/: extfile.ext  init_mongo.js  install-hooks.bash  install-hooks.sh  pre-commit.bash  pre-commit.sh  rabbitmq-definitions.json  rabbitmq-tls.conf  rabbitmq.conf  sort.sh  tls_helper.sh
scripts/dictionary/: dedup-dictionary.sh  pyspelling.sh  sort.sh
scripts/metax_mappings/: create_metax_references.py  fetch_refs.sh
scripts/rabbitmq/: rabbitmq-definitions.json
scripts/swagger/: generate.sh  yaml-to-html.py
scripts/taxonomy/: create_names_json.py  generate_name_taxonomy.sh  taxonomy.py
scripts/tls/: tls_helper.sh
tests/: __init__.py  conftest.py  coveralls.py  locustfile.py  mockups.py  test_api.py  test_auth.py  test_conf.py  test_db_service.py  test_doi.py  test_handlers.py  test_health.py  test_helpers.py  test_metax_mapper.py  test_middlewares.py  test_mirror.py  test_operators.py  test_parser.py  test_schema_loader.py  test_server.py  test_utils.py  utils.py
tests/api/: test_handlers.py  test_parser.py  test_views.py
tests/database/: test_db_services.py
tests/http/: _login.py  bp_submission.http  publication_bp.http  publication_minimal.http  publication_minimal_xml.http  publication_rems.http  publication_xml.http  rems.http  sd_submission.http  sda.http  xml-files.sh
tests/integration/: .env.example  __init__.py  clean_db.py  conf.py  conftest.py  helpers.py  mock-auth.json  mock_admin_api.py  mock_auth.py  mock_datacite_api.py  mock_doi_api.py  mock_metax_api.py  mock_pid_api.py  mock_rems_api.py  mongo.py  mongo_indexes.py  run_tests.py  test_bigpicture.py  test_drafts.py  test_endpoints.py  test_files.py  test_metax.py  test_object.py  test_publications.py  test_queries.py  test_submissions.py  test_taxonomy_search.py  test_users.py
tests/load_tests/: locustfile.py
tests/performance/: locustfile.py  locustfile_csc.py  locustfile_nbis.py
tests/test_files/: invalid_SUBMISSION.xml
tests/unit/: __init__.py  conftest.py  mockups.py  test_auth.py  test_datacite.py  test_db_service.py  test_doi.py  test_handlers.py  test_health.py  test_ldap.py  test_logger.py  test_metax_mapper.py  test_middlewares.py  test_operators.py  test_parser.py  test_pid.py  test_repository.py  test_schema_loader.py  test_server.py  test_workflows.py
(+311 files in other folders)
