[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "metadata_backend"
dynamic = ["version", "dependencies"]
description = "metadata_backend"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
authors = [
    { name = "CSC Developers" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.optional-dependencies]
test = [
    "coverage==7.6.5",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.6.1",
    "tox==4.23.2",
    "setuptools==72.2.0",
]
docs = [
    "sphinx >= 1.4",
    "sphinx_rtd_theme==3.0.1",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
atomic = true
profile = "black"
line_length = 120
py_version=312

[project.scripts]
metadata_submitter = "metadata_backend.server:main"

[project.urls]
Source = "https://github.com/CSCfi/metadata_submitter"

[tool.hatch.version]
path = "metadata_backend/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = false
strict_optional = false
