[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metadata_backend"
dynamic = ["version"]
description = "metadata_backend"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT License" }
authors = [
    { name = "CSC Developers" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "aiohttp==3.13.3",
    "cryptography==46.0.5",
    "defusedxml==0.7.1",
    "gunicorn==24.1.1",
    "metomi-isodatetime==1!3.1.0",
    "jsonschema==4.26.0",
    "idpyoidc==5.0.0",
    "pydantic==2.12.5",
    "pynacl==1.6.2",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.3", # for building swagger html
    "requests==2.32.5",
    "ujson==5.11.0",
    "uvloop==0.22.1",
    "xmlschema==4.3.1",
    "typing-extensions==4.15.0",
    "pyjwt>=2.10.1",
    "ldap3 @ git+https://github.com/cannatag/ldap3.git@refs/pull/983/head",
    # Above is a workaround found here until new version is released: https://github.com/cannatag/ldap3/issues/1159#issuecomment-2535547426
    "cachetools>=5.5.2",
    "types-cachetools>=5.5.0.20240820",
    "sqlalchemy>=2.0.41",
    "aiosqlite>=0.21.0",
    "psycopg[binary]>=3.2.9",
    "greenlet>=3.2.2",
    "asyncpg>=0.30.0",
    "aioboto3>=15.5.0",
    "ulid-py>=1.1.0",
    "lxml>=5.4.0",
    "fsspec>=2025.7.0",
    "datacite>=1.3.1",
    "pydantic-settings>=2.12.0",
    "pydantic-string-url>=1.0.2",
    "aiocache>=0.12.3",
    "python-dotenv>=1.2.1",
    "rdflib>=7.5.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    # mypy
    "mypy>=1.15.0",
    "types-requests==2.32.4.20260107",
    "types-ujson==5.10.0.20250822",
    "types-python-dateutil>=2.9.0.20241206",
    # ruff
    "ruff==0.14.14",
    # pytest
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    # other
    "aiofiles==24.1.0",
    "authlib==1.6.6",
    "certifi==2026.1.4",
    "honcho==2.0.0",
    "moto[server]>=5.1.6",
    "pytest-aiohttp>=1.1.0",
    "respx>=0.22.0",
]

[project.scripts]
metadata_submitter = "metadata_backend.server:main"

[project.urls]
Source = "https://github.com/CSCfi/metadata_submitter"

[project.optional-dependencies]
verify = [
    # mypy
    "mypy>=1.15.0",
    "types-requests==2.32.4.20260107",
    "types-ujson==5.10.0.20250822",
    "types-python-dateutil>=2.9.0.20241206",
    # ruff
    "ruff==0.14.14",
    # vulture
    "vulture>=2.14"
]

test = [
    # pytest
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
]

docs = [
    "sphinx>=1.4",
    "sphinx_rtd_theme==3.1.0",
]

[tool.hatch.version]
path = "metadata_backend/__init__.py"

# Added temporarily so ldap3 can be installed from a specific commit
[tool.hatch.metadata]
allow-direct-references = true

# Tool configuration options
#

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# I: isort
# E: pycodestyle errors
# W: pycodestyle warnings
# F: Pyflake
# B: Bandit
select = ["I", "E", "W", "F", "B"]
ignore = [
    # Raise without from inside except.
    "B904",
    # Assert False.
    "B011"
]

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = false
strict_optional = false
plugins = ["pydantic.mypy"]

[tool.vulture]
exclude = []
ignore_decorators = []
ignore_names = []
paths = ["metadata_backend"]
